--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                             <i class="fab fa-facebook"></i>
                                         </a>
                                     </div>
-                                    <span>Twitter</span>
+                                    <span>Facebook</span>
                                 </div>
                             </div>
                             <div class="buttonmob1"></div>
@@ -303,7 +303,7 @@
                                         <a href="https://web.facebook.com/?_rdc=1&_rdr" target="_blank" rel="noreferrer">
                                             <i class="fab fa-facebook"></i>
                                     </div>
-                                    <span>Twitter </a>
+                                    <span>Facebook </a>
                               </span>
                                 </div>
                             </div>
